--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
+    "@types/styled-components": "^5.1.23",
     "typescript": "^4.5.5"
   }
 }
